--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
       - name: Publish js file
         id: publish
-        run: find dist/assets/*.js -type f -execdir echo "script_file={}" >> $GITHUB_OUTPUT
+        run: find dist/assets -type f -name "*.js" -exec echo "script_file={}" >> $GITHUB_ENV ';'
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
